# agent-verdict

./: .gitignore  README.md  install.sh  pyproject.toml
demo/: demo_decorator.py  demo_dropped.py  demo_pipeline.py  record_gif.py
src/agent_verdict/: __init__.py  __main__.py  cli.py  decorator.py  mcp_server.py  models.py  pipeline.py
src/agent_verdict/llm/: anthropic.py  base.py  deepseek.py  kimi.py  openai.py
src/agent_verdict/stages/: __init__.py  adversarial.py  base.py  confidence.py  cross_verification.py  entailment.py  logprob.py  self_consistency.py  semantic_similarity.py  verification.py
tests/: conftest.py  test_cli.py  test_cost_tracking.py  test_decorator.py  test_mcp_server.py  test_models.py  test_pipeline.py
tests/test_stages/: test_adversarial.py  test_confidence.py  test_cross_verification.py  test_entailment.py  test_logprob.py  test_prompt_sanitization.py  test_self_consistency.py  test_semantic_similarity.py  test_verification.py
