[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-verdict"
version = "0.1.0"
description = "Structured justification, confidence evaluation, and adversarial self-checking for agent results"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_verdict"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
