[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-verdict"
version = "0.1.0"
description = "Structured justification, confidence evaluation, and adversarial self-checking for agent results"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
mcp-anthropic = ["mcp>=1.0", "anthropic>=0.40"]
mcp-openai = ["mcp>=1.0", "openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "mcp>=1.0"]

[project.scripts]
agent-verdict = "agent_verdict.cli:main"
agent-verdict-mcp = "agent_verdict.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_verdict"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
