[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-verdict"
version = "0.1.0"
description = "Structured justification, confidence evaluation, and adversarial self-checking for agent results"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "sharifli4" }]
keywords = ["agent", "evaluation", "llm", "confidence", "verification", "adversarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/sharifli4/agent-verdict"
Repository = "https://github.com/sharifli4/agent-verdict"
Issues = "https://github.com/sharifli4/agent-verdict/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
deepseek = ["openai>=1.0"]
kimi = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
embeddings = ["sentence-transformers>=3.0"]
nli = ["transformers>=4.40", "torch>=2.0"]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "mcp>=1.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "mcp>=1.0", "anthropic>=0.40", "openai>=1.0"]

[project.scripts]
agent-verdict = "agent_verdict.cli:main"
agent-verdict-mcp = "agent_verdict.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_verdict"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
